// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector renders at the given position with input data attributes 1`] = `
<div
  className="dm-connector dm-connector-input"
  data-dropzone={true}
  data-id="test"
  data-type="DiagramMaker.Connector"
  style={
    Object {
      "transform": "translate3d(150px, 300px, 0)",
    }
  }
>
  <div
    className="dm-handle"
  />
</div>
`;

exports[`Connector renders at the given position with output data attributes 1`] = `
<div
  className="dm-connector dm-connector-output"
  data-draggable={true}
  data-id="test"
  data-type="DiagramMaker.Connector"
  style={
    Object {
      "transform": "translate3d(150px, 300px, 0)",
    }
  }
>
  <div
    className="dm-handle"
  />
</div>
`;
